--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,7 @@ navbar:
             - text: "Tue 2021-08-24"
               href: "lectures/260-2021-08-24-intro.html"
             - text: "Thu 2021-08-26"
-              href: 
+              href: "lectures/260-2021-08-26-history-levels.html"
         - text: "Week 2"
           menu:
           - text: "Tue 2021-08-31"
