--- a/_site.yml
+++ b/_site.yml
@@ -17,7 +17,7 @@ navbar:
         - text: "Week 2"
           menu:
           - text: "Tue 2021-08-31"
-            href: 
+            href: "lectures/260-2021-08-31-methods.html"
           - text: "Thu 2021-09-02"
             href: 
         - text: "Week 3"
