--- a/_site.yml
+++ b/_site.yml
@@ -19,7 +19,7 @@ navbar:
           - text: "Tue 2021-08-31"
             href: "lectures/260-2021-08-31-methods.html"
           - text: "Thu 2021-09-02"
-            href: 
+            href: "lectures/260-2021-09-02-anatomy-I.html"
         - text: "Week 3"
           menu:
           - text: "Tue 2021-09-07"
