--- a/_site.yml
+++ b/_site.yml
@@ -25,7 +25,7 @@ navbar:
           - text: "Tue 2021-09-07"
             href: "lectures/260-2021-09-07-anatomy-II.html"
           - text: "Thu 2021-09-09"
-            href: 
+            href: "lectures/260-2021-09-09-anatomy-III.html"
         - text: "Week 4"
           menu:
           - text: "Tue 2021-09-14"
