--- a/_site.yml
+++ b/_site.yml
@@ -33,9 +33,7 @@ navbar:
         - text: "Week 5"
           menu:
           - text: "Tue 2021-09-21"
-            href: 
-          - text: "Tue 2021-09-23"
-            href: 
+            href: "lectures/260-2021-09-14-cells.html"
         - text: "Week 6"
           menu:
           - text: "Tue 2021-09-28"
