--- a/_site.yml
+++ b/_site.yml
@@ -39,7 +39,7 @@ navbar:
           - text: "Tue 2021-09-28"
             href: "lectures/260-2021-09-28-cells-III.html"
           - text: "Thu 2021-09-30"
-            href: 
+            href: "lectures/260-2021-09-30-neurochem-I.html"
         - text: "Week 7"
           menu:
           - text: "Tue 2021-10-05"
