--- a/_site.yml
+++ b/_site.yml
@@ -55,7 +55,7 @@ navbar:
           - text: "Tue 2021-10-19"
             href: "lectures/260-2021-10-19-depression-bipolar.html"
           - text: "Thu 2021-10-21"
-            href: 
+            href: "lectures/260-2021-10-21-schizophrenia.html"
         - text: "Week 10"
           menu:
           - text: "Tue 2021-10-26"
