--- a/_site.yml
+++ b/_site.yml
@@ -67,7 +67,7 @@ navbar:
         - text: "Week 12"
           menu:
           - text: "Tue 2021-11-09"
-            href: 
+            href: "lectures/260-2021-11-09-action.html"
           - text: "Thu 2021-11-11"
             href: 
         - text: "Week 13"
