--- a/_site.yml
+++ b/_site.yml
@@ -77,7 +77,7 @@ navbar:
         - text: "Week 14"
           menu:
           - text: "Tue 2021-11-30"
-            href: 
+            href: "lectures/260-2021-11-30-memory.html"
           - text: "Thu 2021-12-02"
             href: 
         - text: "Week 15"
