--- a/_site.yml
+++ b/_site.yml
@@ -85,7 +85,7 @@ navbar:
           - text: "Tue 2021-12-07"
             href: "lectures/260-2021-12-07-speed-lab.html"
           - text: "Thu 2021-12-09"
-            href: 
+            href: "lectures/260-2021-09-exam-4-study-guide.html"
     - text: "Evaluation"
       href: evaluation.html
     - text: "Deadlines"
